--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "multer": "^2.0.2",
     "nodemon": "^3.0.1"
   }
