--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.6.0",
     "clsx": "^2.1.0",
+    "firebase": "^12.6.0",
     "framer-motion": "^11.0.0",
     "i18next": "^23.10.0",
     "jwt-decode": "^4.0.0",
